--- a/alurakut/package.json
+++ b/alurakut/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "alurakut",
-  "version": "0.1.0",
-  "private": true,
+  "name": "with-styled-components",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
-  }
+    "babel-plugin-styled-components": "^1.12.0"
+  },
+  "license": "MIT"
 }
